# bingo

./: README.md  example.py  pyproject.toml
.github/workflows/: main.yml
bingo/: __init__.py  core.py
bingo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
